--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -44,7 +44,7 @@ CONFIG_SMP=y
 CONFIG_NR_CPUS=2
 CONFIG_HOTPLUG_CPU=y
 CONFIG_PREEMPT_VOLUNTARY=y
-CONFIG_THUMB2_KERNEL=y
+CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 # CONFIG_CROSS_MEMORY_ATTACH is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
